--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.crepaid">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Crepaid">
+        android:theme="@style/Theme.Crepaid"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".payment.CheckoutActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".payment.cardActivity"
+            android:exported="false" />
         <activity
             android:name=".bankTransfer"
-            android:exported="true">
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".Home_Activity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,15 +35,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Home_Activity"
-            android:exported="false">
-
-        </activity>
-        <activity
             android:name=".add_bank_details"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".Send_Otp_Activity"
             android:exported="false"
@@ -36,6 +45,7 @@
             android:name=".MainActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize">
+
         </activity>
 
         <meta-data
