--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,29 +20,29 @@
             android:name=".payment.cardActivity"
             android:exported="false" />
         <activity
-            android:name=".bankTransfer"
-            android:exported="true">
+            android:name=".UI.bankTransfer"
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".UI.Home_Activity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".Home_Activity"
+            android:name=".UI.add_bank_details"
             android:exported="false" >
 
         </activity>
         <activity
-            android:name=".add_bank_details"
-            android:exported="false" >
-
-        </activity>
-        <activity
-            android:name=".Send_Otp_Activity"
+            android:name=".UI.Send_Otp_Activity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".MainActivity"
+            android:name=".UI.MainActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize">
 
