--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,18 @@ plugins {
 
 android {
     compileSdk 31
-
     defaultConfig {
-        applicationId "com.crepaid"
+        applicationId "com.cashix"
         minSdk 24
-        targetSdk 31
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures {
+        viewBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -28,6 +29,11 @@ android {
 }
 
 dependencies {
+
+    implementation "androidx.browser:browser:1.3.0"
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.razorpay:checkout:1.6.12'
     implementation 'com.stripe:stripe-android:18.0.0'
     implementation 'com.squareup.okhttp3:okhttp:4.5.0'
     implementation 'com.google.code.gson:gson:2.8.6'
