--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.crepaid">
+    package="com.cashix">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,14 +14,28 @@
         android:theme="@style/Theme.Crepaid"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".UI.payRent"
-            android:exported="true" >
+            android:name=".playPackage.pplayMain"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".UI.MoreActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".UI.pay_wallet"
+            android:exported="false" />
+        <activity
+            android:name=".UI.no_internet"
+            android:exported="false" />
+        <activity
+            android:name=".UI.payRent"
+            android:exported="false" />
         <activity
             android:name=".payment.CheckoutActivity"
             android:exported="false" />
@@ -32,7 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".UI.Home_Activity"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".UI.add_bank_details"
             android:exported="false" />
@@ -43,13 +58,21 @@
         <activity
             android:name=".UI.MainActivity"
             android:exported="false"
-            android:windowSoftInputMode="adjustResize">
-
-        </activity>
+            android:theme="@style/myStyle"
+            android:windowSoftInputMode="adjustResize" />
 
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+            android:resource="@array/preloaded_fonts" /> <!-- <meta-data -->
+        <!-- android:name="com.razorpay.ApiKey" -->
+        <!-- android:value="rzp_live_ILgsfZCZoFIKMb" -->
+        <!-- /> -->
+        <meta-data
+            android:name="com.razorpay.ApiKey"
+            android:value="rzp_live_ILgsfZCZoFIKMb" />
+        <meta-data
+            android:name="com.google.android.gms.wallet.api.enabled"
+            android:value="true" />
     </application>
 
 </manifest>
