--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,28 +31,29 @@ android {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
-
+//    implementation 'com.github.razir.progressbutton:progressbutton:2.1.0'
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth'
-
-
-    implementation "androidx.browser:browser:1.3.0"
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'androidx.navigation:navigation-fragment:2.3.5'
-    implementation 'androidx.navigation:navigation-ui:2.3.5'
-    implementation 'com.google.firebase:firebase-firestore:24.0.0'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    def lottieVersion = "3.4.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "androidx.browser:browser:1.4.0"
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    implementation 'androidx.navigation:navigation-fragment:2.4.2'
+    implementation 'androidx.navigation:navigation-ui:2.4.2'
+    implementation 'com.google.firebase:firebase-firestore:24.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.razorpay:checkout:1.6.12'
     implementation 'com.stripe:stripe-android:18.0.0'
     implementation 'com.squareup.okhttp3:okhttp:4.5.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.jackandphantom.android:circularimageview:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'io.github.chaosleung:pinview:1.4.4'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
