home fragment migrated to dagger

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
 
         </activity>
         <activity
+            android:windowSoftInputMode="stateHidden|adjustResize"
             android:name=".kotlin.UI.MainActivity"
             android:exported="true">
             <intent-filter>
