--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.razorpay:checkout:1.6.35'
     implementation 'com.stripe:stripe-android:18.0.0'
+    implementation "com.paytm.nativesdk:core-wr:1.3.4"
 
     implementation 'com.squareup.okhttp3:okhttp:4.5.0'
     implementation 'com.google.code.gson:gson:2.8.9'
